--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: mdubus <marvin@42.fr>                      +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/04 14:19:44 by mdubus            #+#    #+#              #
-#    Updated: 2017/11/03 17:39:14 by mdubus           ###   ########.fr        #
+#    Updated: 2017/11/10 18:48:46 by mdubus           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -51,10 +51,10 @@ SRC =	ft_absolute.c ft_absolute_double.c ft_atoi.c ft_atoi_base.c\
 		ft_strsplit.c ft_strstr.c ft_strsub.c ft_strtoupper.c\
 		ft_strtrim.c ft_swap_adress.c ft_tolower.c ft_toupper.c\
 		get_next_line_backslash.c ft_nb_occur_char_in_str.c\
-		ft_print_error_fd_exit.c ft_strjoin_proper.c ft_free_tab_char.c\
+		ft_print_error_fd_exit.c ft_strjoin_proper.c\
 		ft_strnstartcpy.c ft_read_all_file.c ft_check_if_num.c\
 		ft_strdup_plus_char.c ft_strsplit_strict.c ft_create_tab.c\
-		ft_free_tab_int.c ft_print_tab_int.c
+		ft_free_double_tab.c ft_print_tab_int.c ft_print_tab_bool.c
 
 OBJ = $(SRC:.c=.o)
 
